<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cdi.tp_android_convertisseur.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="300dp"
        android:text="@string/lbl_activite"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/lbl_devise_dep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:id="@+id/textViewDevDep"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textViewDevDep"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:id="@+id/spinnerDevDep"
        android:entries="@array/liste_devises"/>

    <TextView
        android:text="@string/lbl_devise_arr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerDevDep"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/textViewDevArr"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textViewDevArr"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:id="@+id/spinnerDevArr"
        android:entries="@array/liste_devises"/>

    <TextView
        android:text="@string/lbl_montant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerDevArr"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/textViewMont"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextMont"
        android:layout_below="@+id/spinnerDevArr"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/textViewMont" />

    <Button
        android:text="@string/btn_conv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:id="@+id/buttonConv"
        android:onClick="onClickConvertir" />

    <Button
        android:text="@string/btn_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/buttonConv"
        android:layout_marginStart="20dp"
        android:id="@+id/buttonQuit"
        android:onClick="onClickQuitter" />
</RelativeLayout>
